# amibis-cpp

./: BuildSConstruct.pl  CHANGES  CHANGES.in  CMakeLists.txt  CheckFiles.pl  CheckLinux.pl  Cherche.pl  ComputerManagement.pm  CopyToStableVersion.pl  CreateDebianPackage.pl  CreateDebianPackages.pl  Doxyfile  FindAvahi-Client.cmake  FindAvahi-Common.cmake  FindAvahi.cmake  FindDNS-SD.cmake  FindIconv.cmake  GenStaticWorkAround.pl  GenUserFriendlyAPI_h.pl  GenerateFinalVersion.pl  GenerateXsdSupportFiles.pl  LICENCE  LICENCE.in  ListeExtensions.pl  MDNS_README  MakeAllPackages.pl  Makefile.in  Omiscid-config.in  Omiscid-config.in.scons  Omiscid-config.scons.in  Omiscid.h  OmiscidInit.py  OmiscidPackaging.cmake  OmiscidScons.py  OmiscidScons.py.in  PrepareDist.pl  README  RecursiveDos2Unix.pl  ReformatPython.pl  SConstruct  (+15 more)
Com/: CMakeLists.txt  ComTools.cpp  Config.cpp  ConfigCom.cpp  Connector.cpp  Doxyfile.in  Makefile  Makefile.conf.in  Makefile.rules  Message.cpp  MsgManager.cpp  MsgSocket.cpp  MsgSocketException.cpp  OmiscidCom-config.in  OmiscidCom-config.in.cmake  TcpClient.cpp  TcpServer.cpp  TcpUdpClientServer.cpp  UdpExchange.cpp  configure.ac  modCom.dcl  primacom-config.in
Com/Com/: ComTools.h  Config.h  ConfigCom.h  Connector.h  Message.h  MsgManager.h  MsgSocket.h  MsgSocketException.h  TcpClient.h  TcpServer.h  TcpUdpClientServer.h  UdpExchange.h
Com/Ravi/: script-client.scm  script-server.scm  udpclient.scm  udpserver.scm
Examples/: Accumulator.cpp  Accumulator.h  AccumulatorStructuredMessage.h  AccumulatorWithStructuredMessage.cpp  AccumulatorWithStructuredMessage.h  BipService.cpp  BrowsingTest.cpp  BrowsingTest.h  CMakeLists.txt  ClientAccumulator.cpp  ClientAccumulator.h  ClientAccumulatorWithStructuredMessage.cpp  ClientAccumulatorWithStructuredMessage.h  (+21 more)
Examples/Calculator/: CMakeLists.txt  Calculator.cpp  Client.cpp  Client.h  Server.cpp  Server.h  ServerRPC.cpp  ServerRPC.h
Examples/StructuredMessage/: CMakeLists.txt  StructuredMessageExample.cpp
Json/: CMakeLists.txt  JSON_parser.c  JSON_parser.cpp  json_spirit_reader.cpp  json_spirit_value.cpp  json_spirit_writer.cpp
Json/Json/: JSON_parser.h  json_spirit.h  json_spirit_reader.h  json_spirit_value.h  json_spirit_writer.h
Messaging/: CMakeLists.txt  ConfigMessaging.cpp  DelayedResult.cpp  Json.cpp  Messaging.cpp  Serializable.cpp  SerializeException.cpp  SerializeManager.cpp  SerializeValue.cpp  StructuredMessage.cpp  StructuredMessageException.cpp  StructuredMethodCall.cpp  StructuredMethodCallbackFactory.cpp  StructuredMethodCallbackListener.cpp  StructuredParameters.cpp  StructuredResult.cpp
Messaging/Messaging/: Access.h  ConfigMessaging.h  DelayedResult.h  Json.h  Messaging.h  MethodCallback.h  MethodCallbackFactory.h  Serializable.h  SerializeException.h  SerializeManager.h  SerializeValue.h  StructuredMessage.h  StructuredMessageException.h  StructuredMethodCall.h  StructuredMethodCallback.h  StructuredMethodCallbackFactory.h  StructuredMethodCallbackListener.h  StructuredMethodCallback_NP.h  StructuredParameters.h  StructuredResult.h
ServiceControl/: Attribut.cpp  Attribute.cpp  BrowseForDNSSDTotoService.cpp  BrowseForDnsSdService.cpp  BrowseForService.cpp  CMakeLists.txt  Config.cpp  ConfigServiceControl.cpp  ConnectorListener.cpp  ControlClient.cpp  ControlServer.cpp  ControlUtils.cpp  DnsSdProxy.cpp  DnsSdService.cpp  Doxyfile.in  Factory.cpp  InOutputAttribut.cpp  InOutputAttribute.cpp  IntVariableAttribut.cpp  IntVariableAttribute.cpp  LocalVariableChangeListener.cpp  LocalVariableListener.cpp  Makefile  Makefile.conf.in  Makefile.rules  MessageListener.cpp  OMiSCIDParser.cpp  OmiscidControl-config.in  OmiscidControl-config.in.cmake  OmiscidMessageListener.cpp  OmiscidService.cpp  OmiscidServiceFilters.cpp  OmiscidServiceProxy.cpp  OmiscidServiceRegistry.cpp  OmiscidServices.cpp  OmiscidServicesTools.cpp  OmiscidVariableChangeListener.cpp  RaviControlServer.cpp  RemoteVariableChangeListener.cpp  Service.cpp  (+27 more)
ServiceControl/ServiceControl/: Attribut.h  Attribute.h  BrowseForDnsSdService.h  BrowseForService.h  Config.h  ConfigServiceControl.h  ConfigZeroconf.h  ConfigZeroconf.h.in  ConnectorListener.h  ControlClient.h  ControlServer.h  ControlUtils.h  DnsSdProxy.h  DnsSdService.h  Factory.h  InOutputAttribut.h  InOutputAttribute.h  IntVariableAttribut.h  IntVariableAttribute.h  LocalVariableChangeListener.h  LocalVariableListener.h  MessageListener.h  OMiSCIDParser.h  OmiscidMessageListener.h  OmiscidService.h  OmiscidServiceFilters.h  OmiscidServiceProxy.h  OmiscidServiceRegistry.h  OmiscidServices.h  OmiscidServicesTools.h  OmiscidVariableChangeListener.h  RaviControlServer.h  RemoteVariableChangeListener.h  RemotelVariableChangeListener.h  Service.h  ServiceFilter.h  ServiceFilters.h  ServiceFromXML.h  ServiceProperties.h  ServiceProxy.h  (+22 more)
ServiceControl/test/: service_descr.xml  testclient.cpp  testregister.cpp
System/: AtomicCounter.cpp  AtomicReentrantCounter.cpp  CMakeLists.txt  Config.cpp  ConfigSystem.cpp  Counter.cpp  DateAndTime.cpp  Doxyfile  ElapsedTime.cpp  Event.cpp  LockManagement.cpp  LockableObject.cpp  Makefile  Makefile.conf.in  Makefile.rules  Memory.cpp  MultipleReferencedData.cpp  Mutex.cpp  MutexedCounter.cpp  MutexedSimpleList.cpp  OmiscidSystem-config.in  OmiscidSystem-config.in.cmake  Portage.cpp  RecycleSimpleList.cpp  ReentrantMutex.cpp  ShareMemSegment.cpp  SharedMemSegment.cpp  SimpleException.cpp  SimpleList.cpp  SimpleListException.cpp  SimpleString.cpp  Socket.cpp  SocketException.cpp  TemporaryMemoryBuffer.cpp  Thread.cpp  TrackingMemoryLeaks.cpp  configure.ac  modPrimaSystem.dcl
System/System/: AtomicCounter.h  AtomicReentrantCounter.h  AutoDelete.h  Config.h  ConfigSystem.h  DateAndTime.h  ElapsedTime.h  Event.h  LockManagement.h  Memory.h  MultipleReferencedData.h  Mutex.h  MutexedCounter.h  MutexedSimpleList.h  Portage.h  RecycleSimpleList.h  ReentrantMutex.h  SharedMemSegment.h  SimpleException.h  SimpleList.h  SimpleListException.h  SimpleString.h  Socket.h  SocketException.h  TemporaryMemoryBuffer.h  Thread.h  TrackingMemoryLeaks.h
(+41 files in other folders)
