INCLUDE_DIRECTORIES(${ICONV_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ZEROCONF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OMiSCID_SOURCE_DIR}/System)
INCLUDE_DIRECTORIES(${OMiSCID_SOURCE_DIR}/Com)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

#for future release
#CONFIGURE_FILE(ServiceControl/ConfigZeroconf.h.in
#    ${CMAKE_CURRENT_SOURCE_DIR}/ServiceControl/ConfigZeroconf.h @ONLY)  

FILE(GLOB OmiscidControl_SRCS "*.cpp")
FILE(GLOB OmiscidControl_HEADERS "ServiceControl/*.h")

ADD_LIBRARY(OmiscidControl ${LIB_TYPE} ${OmiscidControl_SRCS} ${OmiscidControl_HEADERS})
TARGET_LINK_LIBRARIES(OmiscidControl 
    OmiscidCom ${ZEROCONF_LIBRARIES} ${LIBXML2_LIBRARIES})
SET_TARGET_PROPERTIES(OmiscidControl PROPERTIES 
    VERSION ${OMISCID_VERSION} 
    SOVERSION ${OMISCID_SO_VERSION})

CONFIGURE_FILE(OmiscidControl-config.in.cmake 
    ${CMAKE_CURRENT_BINARY_DIR}/OmiscidControl-config @ONLY)  
  
INSTALL(TARGETS OmiscidControl
    ARCHIVE DESTINATION lib${LIB_SUFFIX}
    LIBRARY DESTINATION lib${LIB_SUFFIX}
    RUNTIME DESTINATION bin)
INSTALL(
    FILES ${OmiscidControl_HEADERS} DESTINATION include/Omiscid/ServiceControl)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/OmiscidControl-config
    DESTINATION bin
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

