INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB OmiscidSystem_SRCS "*.cpp")
FILE(GLOB OmiscidSystem_HEADERS "System/*.h")
ADD_LIBRARY(OmiscidSystem ${LIB_TYPE} ${OmiscidSystem_SRCS} ${OmiscidSystem_HEADERS})
TARGET_LINK_LIBRARIES(OmiscidSystem ${CMAKE_THREAD_LIBS_INIT} ${SOCK_LIBRARIES})
SET_TARGET_PROPERTIES(OmiscidSystem PROPERTIES 
    VERSION ${OMISCID_VERSION} 
    SOVERSION ${OMISCID_SO_VERSION})

CONFIGURE_FILE(OmiscidSystem-config.in.cmake 
    ${CMAKE_CURRENT_BINARY_DIR}/OmiscidSystem-config @ONLY)

INSTALL(TARGETS OmiscidSystem
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib${LIB_SUFFIX}
    ARCHIVE DESTINATION lib${LIB_SUFFIX}
)
INSTALL(DIRECTORY System DESTINATION include
  FILES_MATCHING PATTERN "*.h"
  PATTERN ".svn" EXCLUDE
  )

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/OmiscidSystem-config 
    DESTINATION bin
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

